fix text alignment in project section

--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -5,7 +5,8 @@ section.contact {
   li {
     display: inline-block;
     p {
-      @include reset-box-model;
+      margin: 0;
+      padding: 0;
     }
   }
 }
