--- a/src/sass/_projects.scss
+++ b/src/sass/_projects.scss
@@ -1,9 +1,5 @@
 section.projects {
-  width: 100%;
-  @extend %clearfix;
-
   & > div {
-    position: relative;
     @include column(50%);
     padding: 8em 0;
     height: 20em;
@@ -14,10 +10,6 @@ section.projects {
     }
 
     p {
-      position: absolute;
-      bottom: 1em;
-      width: 100%;
-      text-align: center;
       color:$snowflake;
       @media all and (max-width: $breakpoint) {
         width: 100%;
@@ -38,6 +30,7 @@ section.projects {
     background: linear-gradient(145deg, rgba($bright-turkish-rose, 1), $turkish-rose);
     img {
       width: 10em;
+      margin-top: 5px;
     }
   }
 }
